# SnuRHAC

./: .gitignore  README.md
driver/: .gitignore  Kbuild  Makefile  conftest.sh  nv_compiler.h  snurhac_nodes.config
driver/nvidia/: export_nvswitch.h  ioctl_nvswitch.h  nv-p2p.h  nv-reg.h  nv_gpu_ops.h  nvidia.Kbuild  nvlink_common.h  nvlink_errors.h
driver/nvidia-uvm/: nvidia-uvm.Kbuild  uvm8_api.h  uvm8_ats_faults.h  uvm8_extern_decl.h  uvm8_global.h  uvm8_gpu.h  uvm8_init.h  uvm8_kvmalloc.h  uvm8_lock.h  uvm8_perf_events.h  uvm8_pmm_gpu.h  uvm8_pmm_sysmem.h  uvm8_procfs.h  uvm8_push.h  uvm8_test.h  uvm8_va_block.h  uvm8_va_range.h  uvm8_va_space.h  uvm8_volta_fault_buffer.c  uvm_common.h
driver/snurhac-nvidia/: rhac_chardev.c  rhac_chardev.h  rhac_comm.c  rhac_comm.h  rhac_config.h  rhac_correlator.c  rhac_correlator.h  rhac_ctx.c  rhac_ctx.h  rhac_iocx.c  rhac_iocx.h  rhac_isr_table.c  rhac_isr_table.h  rhac_module.c  rhac_msg.c  rhac_msg.h  rhac_nvidia.c  rhac_nvidia.h  rhac_nvidia_common.c  rhac_nvidia_common.h  rhac_nvidia_cpu.c  rhac_nvidia_cpu.h  rhac_nvidia_decl.h  rhac_nvidia_decl_cpu.h  rhac_nvidia_decl_gpu.h  rhac_nvidia_gpu.c  rhac_nvidia_gpu.h  rhac_nvidia_helpers.c  rhac_nvidia_helpers.h  rhac_nvidia_mm.c  rhac_nvidia_mm.h  rhac_nvidia_pipeline.c  rhac_nvidia_pipeline.h  rhac_nvidia_prefetch.c  rhac_nvidia_prefetch.h  rhac_nvidia_symbols.c  rhac_nvidia_symbols.h  rhac_pdsc.c  (+9 more)
mapa/: build.sh
mapa/tools/clang/examples/mapa/: CMakeLists.txt  main.cpp
mapa/tools/clang/lib/SnuAnalysis/: CMakeLists.txt  Dominator.cpp  Invariance.cpp  LiveVariables.cpp  Loop.cpp  Makefile  MemoryAccess.cpp  PointerAnalysis.cpp
mapa/tools/clang/lib/SnuMAPA/: CMakeLists.txt  InductionVariable.cpp  MAPAFrontend.cpp  MAPAOptions.cpp  MAPDatabase.cpp  Makefile  MemoryAccessPattern.cpp  SymbolicAnalysis.cpp
runtime/: Makefile
sample/: Makefile  syrk.cu
(+77 files in other folders)
